# ai-trace-scanner

./: .ai-trace-scan.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  ai_trace_scan.py  pyproject.toml  shell.nix
ai_trace_scan/: __init__.py  cli.py  config.py  dates.py  git_scan.py  output.py  patterns.py  source_scan.py
tests/: test_cli.py  test_config.py  test_dates.py  test_git_scan.py  test_output.py  test_patterns.py  test_source_scan.py
