[project]
name = "ai-trace-scan"
version = "0.4.0"
description = "Detect AI/agentic authorship fingerprints in a codebase"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pygments>=2.17",
    "pathspec>=0.12",
]

[project.scripts]
ai-trace-scan = "ai_trace_scan.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
