[project]
name = "ai-trace-scan"
version = "0.5.0"
description = "Detect AI/agentic authorship fingerprints in a codebase"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pygments>=2.17",
    "pathspec>=0.12",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
dev = [
    "black>=24.0",
    "ruff>=0.4",
    "mdformat>=0.7",
    "mdformat-gfm>=0.3",
    "mdformat-tables>=1.0",
    "pre-commit>=3.7",
]

[project.scripts]
ai-trace-scan = "ai_trace_scan.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long — black handles this
    "SIM108", # ternary operator — readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["ai_trace_scan"]
